# simple-search

./: CMakeLists.txt  README.md
blockchain/: blockchain_interface.cpp  blockchain_interface.h
database/: db_interface.cpp
enterprise/enterprise/: AbstractScreen.qml  BoardManager.qml  CreateDeal.qml  DealItem.qml  DealManger.qml  Login.qml  Register.qml  accountmanager.cpp  accountmanager.h  blockchainWorkerThread.cpp  config.cpp  config.h  dealmanager.cpp  enterprise.pro  internaldb.cpp  internaldb.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  zmq_manager.cpp  zmq_manager.h
file_server/src/: message_handler.cpp  zmq_listener.cpp
generator_server/: .dump_client.cpp.swp  .test_mutithread_zmq.cpp.swp  CMakeLists.txt  build.sh  dump_client  dump_client.cpp  generator_server  main  main.cpp  test  test_mutithread_zmq  test_mutithread_zmq.cpp
generator_server/client_test/: dump_client_generator.cpp  dump_client_signing.cpp
generator_server/include/: config.h  jsonhandle.hpp  numberhandle.hpp  peer.hpp  utils.hpp
generator_server/src/: jsonhandle.cpp  numberhandle.cpp  peer.cpp
message/: message.cpp  message.h
signing_server/: .gitignore  CMakeLists.txt  cmake_install.cmake  main.cpp  signing_server
signing_server/client_test/: build.sh  dump_client.cpp  dump_client_generator.cpp  dump_signing_message.cpp
signing_server/include/: config.h  jsonhandle.hpp  peer.hpp  signinghandle.hpp
signing_server/src/: jsonhandle.cpp  peer.cpp  signinghandle.cpp
